--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ---
 layout: "base.html"
-description: "Junk Force Michigan - Reliable Junk Removal & Hauling Services in Michigan"
-metaTitle: "Junk Force Michigan | Junk Removal & Hauling Services in Michigan"
-tagTitle: "Junk Force Michigan"
+description: "Traverse City Handy – Expert Carpentry, Bath & Kitchen Remodel, Painting, and Trim Services in Michigan"
+metaTitle: "Traverse City Handy | Carpentry & Remodeling Services in Michigan"
+tagTitle: "Traverse City Handy"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/local.css"
 permalink: "/"
@@ -16,42 +16,26 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="hero">
-  <video autoplay muted loop playsinline class="cs-picture">
-    <source
-      src="/images/hero_vid.mov"
-      type="video/mp4"
-      autoplay
-      muted
-      loop
-      playsinline
-    />
+  <video autoplay muted loop playsinline class="cs-picture" poster="/images/hero_img.png">
+    <source src="/images/hero_vid.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
+
   <div class="cs-overlay"></div>
   <div class="cs-container">
     <div class="cs-flex-group">
-      <span class="cs-topper">Same-Day. Affordable. Family-Owned.</span>
+      <span class="cs-topper">Professional. On-Time. Skilled. Educated.</span>
       <h1 class="cs-title">
-        Junk Removal You Can Count On
+        Quality Carpentry & Remodel Services You Can Trust
       </h1>
       <p class="cs-text">
-        At Junk Force Michigan, we provide fast, reliable, and eco-friendly junk removal
-        services for homes and businesses across Michigan. From furniture hauling to appliance
-        disposal, yard waste cleanup to full estate cleanouts — we make decluttering simple, stress-free, and affordable.
+        At Traverse City Handy, we provide expert carpentry, bath and kitchen remodels, painting, and trim work
+        for homes and businesses across Michigan. Our team delivers professional craftsmanship on time and on budget.
       </p>
-      <a href="/junk-removal/" class="cs-button-solid"
-        >Explore Services</a
-      >
+      <a href="/services/" class="cs-button-solid">Explore Services</a>
       <a href="/about/" class="cs-button-transparent">
-        <img
-          class="cs-img"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg"
-          alt="play icon"
-          width="17"
-          height="17"
-        />
+        <img class="cs-img" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg" alt="play icon" width="17" height="17" />
         Learn More
       </a>
     </div>
@@ -65,89 +49,68 @@ eleventyNavigation:
 <section id="services" class="services">
   <div class="card">
     <picture>
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/svgs/service_1.svg"
-        alt="junk removal icon"
-        width="48"
-        height="48"
-      />
+      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_1.svg" alt="carpentry icon" width="48"
+        height="48" />
     </picture>
-    <h2>Junk Removal</h2>
+    <h2>Carpentry</h2>
     <p>
-      Quick and affordable junk removal for homes and businesses — from single items to full cleanouts.
+      Custom carpentry solutions including furniture, shelving, cabinets, and built-ins crafted with precision.
     </p>
   </div>
   <div class="card">
     <picture>
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/svgs/service_2.svg"
-        alt="furniture hauling icon"
-        width="48"
-        height="48"
-      />
+      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_2.svg" alt="bath & kitchen remodel icon"
+        width="48" height="48" />
     </picture>
-    <h2>Furniture Hauling</h2>
+    <h2>Bath & Kitchen Remodel</h2>
     <p>
-      We safely remove and dispose of old furniture, couches, mattresses, and more — so you don’t have to lift a thing.
+      Transform your space with expert bathroom and kitchen renovations tailored to your style and needs.
     </p>
   </div>
   <div class="card">
     <picture>
-      <img
-        aria-hidden="true"
-        decoding="async"
-        src="/assets/svgs/service_3.svg"
-        alt="appliance disposal icon"
-        width="48"
-        height="48"
-      />
+      <img aria-hidden="true" decoding="async" src="/assets/svgs/service_3.svg" alt="painting icon" width="48"
+        height="48" />
     </picture>
-    <h2>Appliance Disposal</h2>
+    <h2>Painting & Trim</h2>
     <p>
-      Eco-friendly appliance pickup and recycling for refrigerators, washers, dryers, and more.
+      Professional interior and exterior painting, along with precise trim work, to give your home a polished finish.
     </p>
   </div>
 </section>
 
 <!-- ============================================ -->
-<!--                 Side By Side                 -->
+<!--                 About Section                -->
 <!-- ============================================ -->
 
 <section id="sbs">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/about_img_0.jpg', 'junk hauling service', 'cs-picture
-      cs-picture1', 'lazy'%}
+      {% image './src/images/about_img_0.png', 'carpentry and remodel service', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About Junk Force Michigan</h2>
+      <h2 class="cs-title">About Traverse City Handy</h2>
       <p class="cs-text">
-        Junk Force Michigan is a family-owned business based in Berkley, MI. Founded by Mike after a 30-year IT career, our mission is simple: 
-        provide affordable, reliable junk hauling services while giving back to our community.
+        Traverse City Handy is a family-owned business based in Michigan. Founded by Dean Borland, our mission is
+        simple:
+        provide professional, on-time, and skilled carpentry, remodeling, painting, and trim services for every client.
       </p>
       <p class="cs-text">
-        We specialize in furniture removal, appliance disposal, yard waste cleanup, garage clear-outs, and full estate cleanouts. Our eco-friendly approach ensures items are donated or recycled whenever possible.
+        From custom carpentry projects to full bath and kitchen remodels, we pride ourselves on attention to detail and
+        craftsmanship. We treat every project as if it were our own home.
       </p>
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-           I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
+          I’m Dean Borland, founder of Traverse City Handy. I started this business to bring professional, skilled, and
+          reliable home improvement services to Michigan families. We handle each project with care and precision,
+          ensuring 100% satisfaction. Let us help you bring your vision to life!
         </p>
-        <span class="cs-name">Mike Fry</span>
+        <span class="cs-name">Dean Borland</span>
         <span class="cs-job">Owner</span>
-        <img
-          class="cs-quote-icon"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg"
-          alt="quote icon"
-          width="136"
-          height="77"
-        />
+        <img class="cs-quote-icon" loading="lazy" decoding="async"
+          src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
+          height="77" />
       </div>
       <a href="/about" class="button-solid">More About Us</a>
     </div>
@@ -161,21 +124,20 @@ eleventyNavigation:
 <section id="sbs-r">
   <div class="cs-container">
     <div class="cs-left">
-      {% image './src/images/featured_img_0.png', 'junk hauling in Michigan',
-      'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/featured_img_0.png', 'home remodeling in Michigan', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <div class="cs-right">
-      <span class="cs-topper">Full-Service Junk Removal</span>
-      <h2 class="cs-title">Why Choose Junk Force Michigan</h2>
+      <span class="cs-topper">Full-Service Home Improvement</span>
+      <h2 class="cs-title">Why Choose Traverse City Handy</h2>
       <p class="cs-text">
-        We handle everything from single-item pickups to large property cleanouts. Our same-day service and affordable pricing make it easy to get your space back fast.
+        Our team delivers top-quality workmanship on every project. From custom carpentry to full bathroom and kitchen
+        renovations, we make your home improvement vision a reality.
       </p>
       <p class="cs-text">
-        Whether it’s clearing a garage, cleaning out a basement, or hauling away yard waste, we do the heavy lifting so you don’t have to. We work with homeowners, renters, realtors, and businesses to provide stress-free solutions that fit your needs.
-        <br /><br />
-        Our family values mean we treat every job with respect, care, and attention to detail. 
+        Professional, on-time, educated, and skilled – these are the values we bring to every home and business project
+        across Michigan. Your satisfaction is our priority.
       </p>
-      <a href="/junk-removal/" class="button-solid">
+      <a href="/services/" class="button-solid">
         Learn More About Our Services →
       </a>
     </div>
@@ -191,47 +153,28 @@ eleventyNavigation:
     <span class="cs-topper">Our Reviews</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      We’re proud to help Michigan families and businesses reclaim their spaces.
-      Customers love our fast service, fair pricing, and family touch. Here’s what they have to say.
+      Michigan homeowners and businesses love our professionalism, craftsmanship, and attention to detail.
     </p>
     <ul class="cs-card-group">
       <li class="cs-item">
         <p class="cs-item-p">
-          Junk Force Michigan was amazing! They cleared out our garage in under an hour and even swept up after. Highly recommend!
+          Dean and his team remodeled our kitchen beautifully. They were professional, skilled, and completed the work
+          on time.
         </p>
         <span class="cs-reviewer">
-          Sarah L.
+          Emily R.
           <span class="cs-desc">Homeowner</span>
         </span>
-        <img
-          class="cs-item-stars"
-          aria-hidden="true"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
-          alt="stars"
-          width="96"
-          height="16"
-        />
       </li>
       <li class="cs-item">
         <p class="cs-item-p">
-          Mike and his team helped with an estate cleanout and made the process so much easier. Professional, respectful, and very affordable.
+          Excellent carpentry and trim work. The team was friendly, punctual, and very detail-oriented. Highly
+          recommend!
         </p>
         <span class="cs-reviewer">
-          James P.
+          Mark T.
           <span class="cs-desc">Client</span>
         </span>
-        <img
-          class="cs-item-stars"
-          aria-hidden="true"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg"
-          alt="stars"
-          width="96"
-          height="16"
-        />
       </li>
     </ul>
   </div>
@@ -244,17 +187,19 @@ eleventyNavigation:
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Get Rid of Your Junk <br />
+      Transform Your Home <br />
       Today
     </h2>
     <p>
-      Ready for a clutter-free space? Contact Junk Force Michigan for affordable, same-day junk removal.
+      Ready for professional home improvement? Contact Traverse City Handy for expert carpentry, remodeling, painting,
+      and trim services.
     </p>
     <a href="/contact/" class="button-solid">Contact Us</a>
   </div>
-  {% image './src/images/final_home_img.png', 'junk removal team at work', '', 'lazy',
-  '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/final_home_img.png', 'home improvement team at work', '', 'lazy', '(max-width: 400px) 400px,
+  (max-width: 850px) 850px, 1920px'%}
 </section>
+
 
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 <script>
