--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,9 +1,7 @@
 ---
 layout: "base.html"
-description: "Learn about Junk Force Michigan’s commitment to reliable junk removal, hauling, and cleanout services
-across Michigan. From furniture and appliances to yard waste and construction debris, we handle it all with care and
-efficiency."
-metaTitle: "About Junk Force Michigan"
+description: "Professional, on-time, and skilled home improvement services in Traverse City, Michigan. From kitchen and bath remodels to custom carpentry, painting, and trim work, we deliver quality craftsmanship you can trust."
+metaTitle: "About Traverse City Handy"
 tagTitle: "About"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/about.css"
@@ -13,51 +11,34 @@ eleventyNavigation:
   order: 300
 ---
 
-<!-- ============================================ -->
-<!--                    LANDING                   -->
-<!-- ============================================ -->
-
 <section id="int-hero">
   <h1 id="home-h">About Us</h1>
-  {% image './src/images/landing.png', 'Junk Force Michigan team at work', '', 'lazy',
+  {% image './src/images/landing.png', 'Traverse City Handy team preparing for a project', '', 'lazy',
   '(max-width: 850px) 850px, 1920px'%}
 </section>
 
-<!-- ============================================ -->
-<!--                 Side By Side                 -->
-<!-- ============================================ -->
-
 <section id="sbs">
   <div class="cs-container">
-    <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/about_img_0.jpg', 'junk removal in progress',
+      {% image './src/images/about_img_0.png', 'carpentry work in progress',
       'cs-picture cs-picture1', 'lazy'%}
     </div>
-    <!-- Right Content Section-->
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About Junk Force Michigan</h2>
+      <h2 class="cs-title">Your Local Home Improvement Experts</h2>
       <p class="cs-text">
-        Junk Force Michigan is a locally owned and operated junk removal company
-        proudly serving homeowners, renters, and businesses across Michigan. We
-        provide fast, affordable, and eco-friendly removal services for
-        furniture, appliances, yard waste, construction debris, hot tubs, and
-        more.
+        Traverse City Handy is a locally owned and operated handyman service dedicated to providing professional, on-time, and skilled craftsmanship for homes and businesses across Traverse City, Michigan. We specialize in a wide range of services, including custom carpentry, bath and kitchen remodels, interior and exterior painting, and detailed trim work.
       </p>
       <p class="cs-text">
-        Our mission is simple: make junk removal stress-free. Whether it’s a
-        single bulky item or a full property cleanout, our team shows up on
-        time, works efficiently, and ensures as much as possible is recycled or
-        donated to reduce landfill waste.
+        Our mission is to bring your home improvement vision to life with reliability and expertise. We handle every project with meticulous care, ensuring quality results that last. From start to finish, our educated and skilled team works efficiently to complete your project on schedule, with a commitment to 100% customer satisfaction.
       </p>
 
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          I’m Mike Fry, founder of Junk Force Michigan. After 30 years in the corporate world, I decided to build a hands-on business with my kids. We're dedicated to helping our neighbors clear out unwanted junk and reclaim their space! We handle all the heavy lifting and disposal with a commitment to 100% customer satisfaction. Let us make your junk disappear! We proudly serve the greater metro Detroit area and surrounding communities. Ready to get rid of your junk? Request a free quote today!
+          I'm Dean Borland, founder of Traverse City Handy. I believe in a straightforward approach to home improvement. We are dedicated to providing clear communication, transparent pricing, and truly professional results. We take pride in our work and are committed to being on-time and educated on the latest techniques and materials. Let us show you what quality craftsmanship looks like.
         </p>
-        <span class="cs-name">Mike Fry</span>
-        <span class="cs-job">Owner</span>
+        <span class="cs-name">Dean Borland</span>
+        <span class="cs-job">Founder</span>
         <img class="cs-quote-icon" loading="lazy" decoding="async"
           src="https://csimg.nyc3.digitaloceanspaces.com/SideBySide/quote-white.svg" alt="quote icon" width="136"
           height="77" />
@@ -65,10 +46,6 @@ eleventyNavigation:
     </div>
   </div>
 </section>
-
-<!-- ============================================ -->
-<!--                    FAQ                       -->
-<!-- ============================================ -->
 
 <section id="faq-326">
   <div class="cs-container">
@@ -81,60 +58,51 @@ eleventyNavigation:
         <li class="cs-faq-item active">
           <button class="cs-button">
             <span class="cs-button-text">
-              What types of junk do you remove?
+              What types of services do you offer?
             </span>
           </button>
           <p class="cs-item-p">
-            We handle almost everything — furniture, appliances, yard waste,
-            hot tubs, construction debris, mattresses, and full property
-            cleanouts. If it can be lifted, we can haul it away.
+            We provide a range of professional home improvement services, including carpentry, complete kitchen and bath remodels, painting, and all types of trim work.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you provide same-day service?
+              Are you licensed and insured?
             </span>
           </button>
           <p class="cs-item-p">
-            Yes! In many cases, we can offer same-day or next-day junk removal
-            so you don’t have to wait to clear out your space.
+            Yes, Traverse City Handy is fully licensed and insured for all services we provide. We believe in providing our clients with peace of mind and protection on every job.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              What happens to the junk you collect?
+              What sets your company apart from others?
             </span>
           </button>
           <p class="cs-item-p">
-            We donate usable items to local charities whenever possible and
-            recycle materials like metal, appliances, and yard waste. Only what
-            can’t be reused goes to the landfill.
+            Our commitment to being professional, on-time, and skilled. Our team is educated and dedicated to delivering a superior experience and exceptional results.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Do you work with homeowners and businesses?
+              Do you offer free estimates?
             </span>
           </button>
           <p class="cs-item-p">
-            Absolutely. We help homeowners, renters, realtors, landlords, and
-            business owners with cleanouts, office clearings, move-outs, and
-            more.
+            Absolutely! We provide free, no-obligation estimates for all our services. We'll discuss your project, offer expert advice, and provide a transparent quote.
           </p>
         </li>
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              Why choose Junk Force Michigan?
+              What areas do you serve?
             </span>
           </button>
           <p class="cs-item-p">
-            We’re professional, reliable, and eco-conscious. With upfront
-            pricing, friendly crews, and a commitment to recycling, we make junk
-            removal easy and affordable.
+            We proudly serve homeowners and businesses throughout the Traverse City, Michigan area and surrounding communities.
           </p>
         </li>
       </ul>
@@ -152,22 +120,17 @@ eleventyNavigation:
   }
 </script>
 
-<!-- ============================================ -->
-<!--             Final Call to Action             -->
-<!-- ============================================ -->
-
 <section id="cta">
   <div class="container">
     <h2 class="title">
-      Clear the Clutter <br />
-      With Us Today
+      Ready to Transform <br />
+      Your Space?
     </h2>
     <p>
-      Junk piling up? Let Junk Force Michigan handle the heavy lifting. Fast,
-      affordable, and eco-friendly junk removal is just a call away.
+      Whether it’s a full remodel or a fresh coat of paint, Traverse City Handy is ready to help. Get started on your next project today with our professional team.
     </p>
-    <a href="/contact/" class="button-solid">Free Estimate</a>
+    <a href="/contact/" class="button-solid">Get a Free Estimate</a>
   </div>
-  {% image './src/images/final_home_img.png', 'Junk Force Michigan team hauling debris',
+  {% image './src/images/final_home_img.png', 'Handyman performing carpentry work',
   '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
 </section>
