--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,8 +1,7 @@
 ---
 layout: "base.html"
-description: "Contact Junk Force Michigan for fast, reliable junk removal, hauling, and cleanout services. Serving homes
-and businesses across Michigan with same-day service, affordable rates, and eco-friendly disposal."
-metaTitle: "Contact Junk Force Michigan | Junk Removal Services"
+description: "Contact Traverse City Handy to start your next home improvement project. Get a professional, on-time estimate for your carpentry, remodeling, painting, or trim work."
+metaTitle: "Contact Traverse City Handy | Home Improvement Services"
 tagTitle: "Contact"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/contact.css"
@@ -12,32 +11,21 @@ eleventyNavigation:
   order: 600
 ---
 
-<!-- ============================================ -->
-<!--                    LANDING                   -->
-<!-- ============================================ -->
-
 <section id="int-hero">
   <h1 id="home-h">Contact Us</h1>
-  {% image './src/images/contactbannerimg.png', 'Junk Force Michigan team ready to help with junk removal needs', '',
+  {% image './src/images/contactbannerimg.png', 'Traverse City Handy team ready to help with your next home improvement project', '',
   'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
-
-<!-- ============================================ -->
-<!--                Contact Form                  -->
-<!-- ============================================ -->
 
 <section id="cs-contact-242">
   <div class="cs-container">
     <div class="cs-content">
-      <span class="cs-topper">Here to Help</span>
+      <span class="cs-topper">Let's Get Started</span>
       <h2 class="cs-title">Get in Touch</h2>
       <p class="cs-text">
-        Whether you’re clearing out old furniture, removing appliances, tackling yard waste, or need a full estate
-        cleanout, Junk Force Michigan is ready to help. Our family-owned business delivers fast, friendly, and
-        affordable junk removal services across Southeast Michigan.
+        Whether you're planning a kitchen remodel, need custom carpentry work, or want a fresh coat of paint, Traverse City Handy is here to help. Contact us today to discuss your project and get a free, on-time estimate from our professional team.
       </p>
     </div>
-    <!-- Form -->
     <form id="cs-form-242" name="Contact Form" method="post">
       <label class="cs-label">
         Name
@@ -49,7 +37,7 @@ eleventyNavigation:
       </label>
       <label class="cs-label">
         Phone
-        <input class="cs-input" required type="text" id="phone-242" name="phone" placeholder="+1 (313) 444-9540" />
+        <input class="cs-input" required type="text" id="phone-242" name="phone" placeholder="+1 (269) 857-8000" />
       </label>
       <label class="cs-label">
         How Did You Find Us
@@ -66,7 +54,6 @@ eleventyNavigation:
       </button>
     </form>
 
-    <!-- Contact Info -->
     <div class="cs-right-section">
       <ul class="cs-ul">
         <li class="cs-li">
@@ -76,7 +63,7 @@ eleventyNavigation:
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Email</span>
-            <a href="mailto:mike@junkforcemichigan.com" class="cs-link">mike@junkforcemichigan.com</a>
+            <a href="mailto:jobs@MichiganHandy.com" class="cs-link">jobs@MichiganHandy.com</a>
           </div>
         </li>
         <li class="cs-li">
@@ -86,57 +73,46 @@ eleventyNavigation:
           </picture>
           <div class="cs-flex-group">
             <span class="cs-header">Phone</span>
-             <a href="tel:313-444-9540">(313) 444-9540</a>
+             <a href="tel:269-857-8000">(269) 857-8000</a>
           </div>
         </li>
       </ul>
-      <!-- Picture -->
       <picture class="cs-picture">
         <source media="(max-width: 600px)" srcset="/images/map.png" />
         <source media="(min-width: 601px)" srcset="/images/map.png" />
         <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="/images/map.PNG"
-          alt="Map showing Junk Force Michigan service area" width="462" height="438" />
+          alt="Map showing Traverse City Handy service area" width="462" height="438" />
       </picture>
     </div>
   </div>
 </section>
-
-<!-- ============================================ -->
-<!--                   Reviews                    -->
-<!-- ============================================ -->
 
 <section id="reviews">
   <div class="cs-container">
     <span class="cs-topper">Client Feedback</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      At Junk Force Michigan, we’re proud to provide same-day junk removal that’s reliable, affordable, and
-      eco-friendly. From hauling away old furniture to clearing full properties, our team delivers results you can
-      trust. Here’s what our customers have to say:
+      At Traverse City Handy, our goal is to deliver professional, on-time, and educated service on every project. Our skilled team is dedicated to providing quality craftsmanship that exceeds expectations. Here's what our customers have to say:
     </p>
     <ul class="cs-card-group">
-      <!-- Review 1 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          Junk Force Michigan was amazing! They cleared out my garage in no time, were super professional, and even
-          swept up after. Highly recommend them.
+          Dean and his team did an amazing job on our kitchen remodel. They were so professional and completed the project right on time. The quality of their carpentry and finishing work is top-notch.
         </p>
         <span class="cs-reviewer">
-          Sarah L.
+          Chris H.
           <span class="cs-desc">Homeowner</span>
         </span>
         <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
           src="https://csimg.nyc3.digitaloceanspaces.com/Reviews/stars-yellow.svg" alt="five star review" width="96"
           height="16" />
       </li>
-      <!-- Review 2 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          They handled our office cleanout quickly and at a great price. Friendly team, on time, and made the whole
-          process stress-free.
+          We hired Traverse City Handy for some detailed trim work and interior painting, and we couldn't be happier with the results. They were incredibly skilled and kept the work area clean. Highly recommend!
         </p>
         <span class="cs-reviewer">
-          James P.
+          Maria R.
           <span class="cs-desc">Business Owner</span>
         </span>
         <img class="cs-item-stars" aria-hidden="true" loading="lazy" decoding="async"
