--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@ eleventyNavigation:
         At Traverse City Handy, we provide expert carpentry, bath and kitchen remodels, painting, and trim work
         for homes and businesses across Michigan. Our team delivers professional craftsmanship on time and on budget.
       </p>
-      <a href="/services/" class="cs-button-solid">Explore Services</a>
+      <a href="/carpentry/" class="cs-button-solid">Explore Services</a>
       <a href="/about/" class="cs-button-transparent">
         <img class="cs-img" loading="lazy" decoding="async"
           src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg" alt="play icon" width="17" height="17" />
@@ -137,7 +137,7 @@ eleventyNavigation:
         Professional, on-time, educated, and skilled – these are the values we bring to every home and business project
         across Michigan. Your satisfaction is our priority.
       </p>
-      <a href="/services/" class="button-solid">
+      <a href="/carpentry/" class="button-solid">
         Learn More About Our Services →
       </a>
     </div>
